Version 1.6 -Tau Ceti-

* [NEW] Newsreader added, users can add newsservers, browse groups from the servers
  and read the articles from any group. A save position option is provided to highlight
  new messages per group/user
* [NEW] SnowChekMail the function used to validate email addresses can be disabled if
  you configure your system as Windows in the main admin panel.
* [NEW] My Tiki section added as a refurbished user_preferences section, this new section
  includes webmail, user_preferences, modules, bookmarks, tasks and all the per-user sections of
  Tiki.
* [NEW] Wiki plugin added: SPLIT used to split a wiki page in two columns.
* [NEW] Wiki plugin added: SQL can be used to display the result of an SQL query to the
  tiki database, useful for reports and others. If you don't use tiki as an intranet you
  may want to remove this plugin for security reasons (!!).
* [NEW] User tasks, users can set-up tasks and mark tasks as completed or remove tasks, 
  a user module is provided. This can be used as a simple to-do list for users.
* [NEW] Wiki page footnotes, wiki pages can have footnotes, footnotes are kept at user
  level (each user only sees his footnotes for each page). This allow users to keep his
  private comments and notes for Wiki pages. 
* [NEW] Plugins added to normal distribution: code, avatar, center
* [NEW] Plugins can be nested
* [NEW] Plugins are re-entrant, a plugin can generate another plugin code. 
* [NEW] Wiki structures can be used to generate slide shows
* [NEW] Changed translation routines to a Smarty prefilter, the first time the screen is
  generated it will be slower but then all the pages will be rendered very fast. Performance
  improvement.
* [NEW] Permissions interface improved supporting multiple permission settings in one operation (the famous
  checkboxes are here)
* [NEW] Permission levels added to the permissions, allowing the admin to classify permissions by level and